private_registry/registry_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: registry
